--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "gh-pages": "^6.2.0",
-    "vue": "^3.5.13"
+    "lucide-vue-next": "^0.503.0",
+    "vue": "^3.5.13",
+    "vue-styled-components": "^1.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
