--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "gh-pages": "^6.2.0",
     "lucide-vue-next": "^0.503.0",
+    "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.5.13",
-    "vue-styled-components": "^1.6.0"
+    "vue-loader": "^17.4.2",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
