--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.3",
     "gh-pages": "^6.2.0",
     "lucide-vue-next": "^0.503.0",
     "oh-vue-icons": "^1.0.0-rc3",
+    "primevue": "^4.3.3",
     "vue": "^3.5.13",
     "vue-loader": "^17.4.2",
     "vue-spinner": "^1.0.4"
