--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@primeuix/themes": "^1.0.3",
+    "floating-vue": "^5.2.2",
     "gh-pages": "^6.2.0",
+    "jspdf": "^3.0.1",
     "lucide-vue-next": "^0.503.0",
     "oh-vue-icons": "^1.0.0-rc3",
-    "primevue": "^4.3.3",
     "vue": "^3.5.13",
     "vue-loader": "^17.4.2",
+    "vue-sonner": "^1.3.2",
     "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
