--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "floating-vue": "^5.2.2",
     "gh-pages": "^6.2.0",
     "jspdf": "^3.0.1",
@@ -18,6 +19,7 @@
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.5.13",
     "vue-loader": "^17.4.2",
+    "vue-router": "^4.5.1",
     "vue-sonner": "^1.3.2",
     "vue-spinner": "^1.0.4"
   },
